--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,8 @@
 
         <activity android:name=".main.mygroups.GroupListlistActivity" ></activity>
 
+        <activity android:name=".main.home.FeedListActivity"></activity>
+
 
     </application>
 
