--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.2.0'
     testImplementation 'org.mockito:mockito-core:2.8.47'
 //    androidTestImplementation 'org.mockito:mockito-android:2.7.22'
     androidTestImplementation 'androidx.navigation:navigation-testing:2.3.0'
