--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,10 +67,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
 
-    //
     //testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     androidTestImplementation "com.android.support:support-annotations:27.1.1"
-    //
 
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test:rules:1.1.0'
@@ -84,5 +82,8 @@ dependencies {
 
     // Used for networking
     implementation 'com.android.volley:volley:1.1.1'
+
+    // jsoup for web scraping
+    implementation 'org.jsoup:jsoup:1.13.1'
 
 }
