--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,7 @@ dependencies {
     // Used for networking
     implementation 'com.android.volley:volley:1.1.1'
 
+    //jsoup
+    implementation 'org.jsoup:jsoup:1.13.1'
+
 }
