--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,25 +59,24 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    testImplementation 'org.mockito:mockito-core:1.10.19'
-
-    implementation 'androidx.navigation:navigation-fragment:2.2.1'
-    implementation 'androidx.navigation:navigation-ui:2.2.1'
-
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.2.0'
+    testImplementation 'org.mockito:mockito-core:2.8.47'
+//    androidTestImplementation 'org.mockito:mockito-android:2.7.22'
+    androidTestImplementation 'androidx.navigation:navigation-testing:2.3.0'
+    debugImplementation ('androidx.fragment:fragment-testing:1.2.5') {exclude group:'org.jetbrains.kotlin'}
+    implementation 'androidx.navigation:navigation-fragment:2.3.0'
+    implementation 'androidx.navigation:navigation-ui:2.3.0'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-
-    //
-    //testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    //noinspection GradleDependency
     androidTestImplementation "com.android.support:support-annotations:27.1.1"
     //
-
-    androidTestImplementation 'androidx.test:runner:1.1.0'
-    androidTestImplementation 'androidx.test:rules:1.1.0'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
 
     androidTestImplementation 'com.21buttons:fragment-test-rule:2.0.1'
     debugImplementation 'com.21buttons:fragment-test-rule-extras:2.0.1'
-    implementation 'androidx.navigation:navigation-runtime:2.2.2'
+    implementation 'androidx.navigation:navigation-runtime:2.3.0'
 
     //apply plugin: 'org.sonarqube'
     apply plugin: 'jacoco'
