--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
     - ANDROID_ABI=armeabi-v7a
     - ANDROID_TAG=google_apis
 
-#So that cache isnt always uploaded
+#So that cache isn't always uploaded
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
@@ -56,16 +56,9 @@ before_script:
 
 
 script:
-#  - ./gradlew build jacocoTestReport assembleAndroidTest
-#  - echo no | android create avd --force -n test -t $ANDROID_API_LEVEL --abi $ANDROID_ABI
-#  - emulator -avd test -no-skin -no-audio -no-window &
-#  - android-wait-for-emulator
-#  - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
 
   - ./gradlew clean build connectedCheck -PdisablePreDex --stacktrace #--scan
-  - ./gradlew -Dscan=true build
-  - ./gradlew connectedCheck
+  - ./gradlew build --scan
 
 after_success:
-  #- ./gradlew jacocoTestReport coveralls
   - bash <(curl -s https://codecov.io/bash)
