--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/applogo"
@@ -28,30 +27,34 @@
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
-        <activity android:name=".authentication.TestingActivity"></activity>
 
-        <activity android:name=".main.availablegroups.AvailableTestingActivity"></activity>
+        <receiver android:name=".main.EventNotificationPublisher" />
 
-        <activity android:name=".authentication.FragmentRegisterActivity"></activity>
+        <!-- =========================== TEST FILES ============================= -->
+        <activity android:name=".authentication.TestingActivity"/>
 
-        <activity android:name=".authentication.ResetActivity"></activity>
+        <activity android:name=".main.availablegroups.AvailableTestingActivity"/>
 
-        <activity android:name=".main.profile.ProfileTestActivity"></activity>
+        <activity android:name=".authentication.FragmentRegisterActivity"/>
 
-        <activity android:name=".main.creategroup.CreateGroupActivity"></activity>
+        <activity android:name=".authentication.ResetActivity"/>
 
-        <activity android:name=".main.createpost.CreatePostActivity"></activity>
+        <activity android:name=".main.profile.ProfileTestActivity"/>
 
-        <activity android:name=".main.availablegroups.GroupListActivity"></activity>
+        <activity android:name=".main.creategroup.CreateGroupActivity"/>
 
-        <activity android:name=".main.home.HomeTestActivity"></activity>
+        <activity android:name=".main.createpost.CreatePostActivity"/>
 
-        <activity android:name=".main.postcomments.PostCommentActivity"></activity>
+        <activity android:name=".main.availablegroups.GroupListActivity"/>
+
+        <activity android:name=".main.home.HomeTestActivity"/>
+
+        <activity android:name=".main.postcomments.PostCommentActivity"/>
 
        <!-- <activity android:name=".main.mygroups.GroupListlistActivity" ></activity> -->
 
-        <activity android:name=".main.home.FeedListActivity"></activity>
-
+        <activity android:name=".main.home.FeedListActivity"/>
+        <!-- ======================================================================== -->
 
     </application>
 
