--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,15 @@ task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'crea
         xml.enabled = true
         html.enabled = true
     }
+   // def fileFilter = ['**/R.class', '**/R$*.class','**/BuildConfig.*', '**/Manifest*.*','**/Test*.*', 'android/**/*.*']
+   // def debugTree = fileTree(dir: "${buildDir}/intermediates/classes/debug", excludes: fileFilter)
+   // def mainSrc = "${project.projectDir}/src/main/java"
+   // sourceDirectories = files([mainSrc])
+   // classDirectories.setFrom(classDirectories.files.collect {fileTree([debugTree])
+   // executionData = fileTree(dir:"$buildDir", includes:[
+  //          "jacoco/testDebugUnitTest.exec",
+  //          "outputs/code-coverage/connected/*coverage.ec"
+   // ])
 }
 
 dependencies {
