--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
 
         <!-- [START firebase_service] -->
         <service
-            android:name=".common.network.MessagingService"
+            android:name=".messaging.MessagingService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
