--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.2.0'
     testImplementation 'org.mockito:mockito-core:2.8.47'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
     androidTestImplementation 'androidx.navigation:navigation-testing:2.3.0'
     debugImplementation ('androidx.fragment:fragment-testing:1.2.5') {exclude group:'org.jetbrains.kotlin'}
     implementation 'androidx.navigation:navigation-fragment:2.3.0'
